other/block-pod-exec-by-pod-name/.chainsaw-test/chainsaw-step-02-apply-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-maintenance-01
  namespace: bpe-podname-ns
spec:
  containers:
  - command:
    - sleep
    - "300"
    image: ghcr.io/kyverno/test-busybox:1.35
    name: busybox
  - command:
    - sleep
    - "300"
    image: ghcr.io/kyverno/test-busybox:1.35
    name: busybox02
