other/block-pod-exec-by-pod-name/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: block-pod-exec-by-pod-name
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../block-pod-exec-by-pod-name.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
    - apply:
        file: chainsaw-step-02-apply-2.yaml
    - apply:
        file: chainsaw-step-02-apply-3.yaml
    - apply:
        file: chainsaw-step-02-apply-4.yaml
  - name: step-03
    try:
    - sleep:
        duration: 5s
  - name: step-04
    try:
    - script:
        content: if kubectl exec -n bpe-podname-ns myapp-maintenance-01 -- ls; then
          exit 1;else exit 0; fi
    - script:
        content: if kubectl exec -n bpe-podname-ns myapp-maintenance-02 -- ls; then
          exit 1;else exit 0; fi
    - script:
        content: kubectl exec -n bpe-podname-ns not-myapp -- ls
  - name: step-99
    try:
    - script:
        content: kubectl delete all --all --force --grace-period=0 -n bpe-podname-ns
